<resources>
    <string name="app_name">Note</string>
    <string name="note_text">Write. Read. Note.</string>
    <string name="motivation">Feeling good today?</string>
    <string name="start_button">Get Started</string>
    <string name="email_hint">Email</string>
    <string name="password_input">Password</string>
    <string name="login_text">Login</string>
    <string name="or">Or</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="note_image_desc">Note Image</string>
    <string name="add_images_desc">Add Images</string>
    <string name="title">Title</string>
    <string name="take_note">Take a note..</string>
    <string name="done">Done</string>
    <string name="date_view">Date added</string>
</resources>
