<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".CreateNoteActivity">

    <ProgressBar
        android:id="@+id/progress_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <FrameLayout
        android:id="@+id/image_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/note_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/note_image_desc"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/backgrounds/scenic" />

        <ImageView
            android:id="@+id/add_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:contentDescription="@string/add_images_desc"
            android:src="@android:drawable/ic_menu_camera" />

        <TextView
            android:id="@+id/current_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_view"
            android:fontFamily="@font/roboto_slab_bold"
            android:layout_gravity="bottom"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/current_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:fontFamily="@font/roboto_slab_bold"
            android:layout_gravity="bottom"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="32dp"/>
    </FrameLayout>

    <EditText
        android:id="@+id/input_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/image_frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:hint="@string/title"
        android:textSize="24sp"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/input_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:hint="@string/take_note"
        android:inputType="textLongMessage"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>