<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="8dp"
    tools:context=".SignupActivity">

    <ProgressBar
        android:id="@+id/progress_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textSize="20sp"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:importantForAutofill="no"/>

    <AutoCompleteTextView
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/password_input"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:background="@android:color/transparent"
        android:textColor="@color/colorPrimary"/>
</LinearLayout>