<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_text"
        android:textSize="28sp"
        android:fontFamily="@font/roboto_slab_bold"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp">

        <TextView
            android:id="@+id/motivation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_regular_italic"
            android:text="@string/motivation"
            android:textSize="22sp"
            android:layout_gravity="center"/>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/start_button"
        android:background="@android:color/transparent"
        android:textColor="@color/colorPrimary"/>

</LinearLayout>